resources/eks/dev/express/app-resources.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: knative-ingress-gateway
    namespace: knative-serving
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*.functions.future-is-comming.dev.buildit.consulting'
      port:
        name: http-system
        number: 80
        protocol: HTTP
    - hosts:
      - '*.functions.future-is-comming.dev.buildit.consulting'
      port:
        name: https-system
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ingress-cert
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
- apiVersion: serving.knative.dev/v1alpha1
  kind: Service
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: express-app
    namespace: functions
  spec:
    template:
      metadata:
        annotations:
          autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
          autoscaling.knative.dev/maxScale: '100'
          autoscaling.knative.dev/metric: concurrency
          autoscaling.knative.dev/target: '5'
      spec:
        containers:
        - env:
          - name: TARGET
            value: Node.js Sample v1
          image: 006393696278.dkr.ecr.eu-west-2.amazonaws.com/future-is-comming-dev-cluster:express-app-42d75fc1940865039640a157b743c14ec2a4ba57
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              cpu: 1000m
- apiVersion: v1
  data:
    autoTLS: Enabled
    httpprotocol: redirected
    issuerRef: 'name: cert-issuer

      kind: ClusterIssuer

      '
    secretName: ingress-cert
    solverconfig: "dns01:\n  provider: route53\n"
  kind: ConfigMap
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: config-certmanager
    namespace: knative-serving
- apiVersion: v1
  data:
    future-is-comming.dev.buildit.consulting: ''
  kind: ConfigMap
  metadata:
    labels:
      kubenix/project-name: kubenix
    name: config-domain
    namespace: knative-serving
kind: List
labels:
